overlays/katech/katech-develop/batch-deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uyuni-manager-batch
spec:
  selector:
    matchLabels:
      app: uyuni-manager-batch
  template:
    metadata:
      labels:
        app: uyuni-manager-batch
    spec:
      hostAliases:
      - ip: "10.10.10.37" # host change
        hostnames:
        - "dev.bigdata-car.kr" # host change
      containers:
      - name: uyuni-manager-batch
      nodeSelector:
        kubernetes.io/hostname: master03
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
